[package]
name = "zen-metrics-cli"
version = "0.6.0"
description = "Unified CLI for decoding zen image formats and scoring perceptual quality metrics on CPU and GPU"
authors = ["Lilith River <support@imazen.io>"]
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
rust-version.workspace = true
publish = false

[[bin]]
name = "zen-metrics"
path = "src/main.rs"

# Library target: re-exports `sweep::*` + `metrics::*` so the fleet
# worker (and any future in-process scorer) can call run_sweep without
# spawning a subprocess. The bin and lib share src/ — main.rs is the
# CLI entry point, lib.rs re-exports the module tree for library use.
#
# Why bother:
#   - The bash worker calls `zen-metrics sweep` ~30 times per chunk
#     (one per knob_tuple). Each subprocess re-initialises cubecl
#     (~3-5s). On a typical chunk that's 90-150s of pure overhead.
#   - Linking the same code as a library into vastai-fleet's
#     worker subcommand means one cubecl init *per worker process*
#     (not per group, not per chunk). 30× fewer inits.
[lib]
name = "zen_metrics_cli"
path = "src/lib.rs"

[features]
# Defaults are CPU-only with the zen decoders available on crates.io that
# build cleanly against the latest archmage / magetypes. JPEG is omitted
# from the default set because zenjpeg 0.8.3 does not yet build against
# magetypes 0.9.x — see the `jpeg` feature note below.
default = ["png", "jpeg", "webp", "avif", "jxl", "cpu-metrics"]

# Decoder feature flags
png = ["dep:zenpng"]
# Enables the `zenjpeg` decoder + sweep encoder. We pin to a path dep on
# the in-workspace zenjpeg 0.8.4 (sibling repo), which restores
# magetypes >= 0.9 compatibility and adds the `__expert` knob bundle.
jpeg = ["dep:zenjpeg", "zenjpeg/zencodec"]
webp = ["dep:zenwebp"]
avif = ["dep:zenavif"]
jxl = ["dep:zenjxl"]

# CPU metric feature flags
cpu-metrics = [
    "dep:butteraugli",
    "dep:zensim",
    "dep:ssimulacra2",
    "dep:dssim-core",
    "dep:rgb",
    "dep:imgref",
]

# GPU bundle: pulls every GPU metric implementation via the umbrella.
gpu = ["gpu-butteraugli", "gpu-ssim2", "gpu-dssim", "gpu-cvvdp", "gpu-iwssim", "gpu-zensim"]
# Per-metric feature flags forward to the corresponding `zenmetrics-api`
# per-metric feature, which in turn pulls in the underlying per-crate
# dep. The CLI now talks to the umbrella's opaque API (`Metric::new`,
# `Metric::compute_srgb_u8`) for the common single-shot path and never
# touches `cubecl::Runtime` directly in steady-state operation.
#
# Two paths still reach into the per-crate typed cubecl-types surface
# via the umbrella's `zenmetrics_api::{butter,cvvdp}` re-exports:
#   - butteraugli's two-column emit (`butteraugli_max_gpu` +
#     `butteraugli_pnorm3_gpu`) needs `ButteraugliResult.pnorm_3`, which
#     the opaque `Score` does not surface.
#   - `CvvdpBatchScorer` caches a `Cvvdp::<R>` instance across pairs of
#     matching dims to avoid the ~200 MB / NVRTC compile per-pair cost
#     that produces fleet OOMs at 100-pair chunks.
# Both go through `zenmetrics-api/cubecl-types` to keep a single
# umbrella dep line; the CLI does not depend on `cubecl`, `cvvdp-gpu`,
# or `butteraugli-gpu` directly.
gpu-butteraugli = ["dep:zenmetrics-api", "zenmetrics-api/butter", "zenmetrics-api/cubecl-types", "dep:cubecl"]
gpu-ssim2 = ["dep:zenmetrics-api", "zenmetrics-api/ssim2"]
gpu-dssim = ["dep:zenmetrics-api", "zenmetrics-api/dssim"]
gpu-cvvdp = ["dep:zenmetrics-api", "zenmetrics-api/cvvdp", "zenmetrics-api/cubecl-types", "dep:cubecl"]
gpu-iwssim = ["dep:zenmetrics-api", "zenmetrics-api/iwssim"]
gpu-zensim = ["dep:zenmetrics-api", "zenmetrics-api/zensim"]
# Pick CubeCL backends. Forward through the umbrella so every enabled
# per-crate gets the right backend feature.
gpu-cuda = ["zenmetrics-api?/cuda", "cubecl?/cuda"]
gpu-wgpu = ["zenmetrics-api?/wgpu", "cubecl?/wgpu"]
gpu-hip = ["zenmetrics-api?/hip", "cubecl?/hip"]
gpu-cpu = ["zenmetrics-api?/cpu", "cubecl?/cpu"]

# `sweep` enables the codec-driving subcommand that encodes a source image
# across a (q, knob_tuple) Cartesian grid and scores each variant via the
# normal metric backends. Codecs stay "dumb" — the sweep driver pokes their
# `__expert` / public encode APIs directly without any in-codec picker glue.
#
# Codec coverage at zen-metrics-cli 0.3.0:
# - zenwebp 0.4.5, zenavif 0.1.7, zenjxl 0.2.1 each ship `__expert` and we
#   opt in here for the full knob bundle.
# - zenjpeg 0.8.4 (path dep on the sibling repo) ships `__expert`, so the
#   sweep driver pulls it in alongside the other codecs.
sweep = [
    "jpeg",
    "webp",
    "avif",
    "jxl",
    "zenjpeg?/__expert",
    "zenjpeg?/trellis",
    # `__test-utils` re-exposes the otherwise-`pub(crate)` `zenjpeg::encode`
    # module so the sweep harness can reach `QuantTableSource` and
    # `HybridConfig` (these are field types of the public `InternalParams`
    # bundle but aren't re-exported through `zenjpeg::encoder::*`).
    "zenjpeg?/__test-utils",
    "zenwebp?/__expert",
    "zenavif?/__expert",
    "zenjxl?/__expert",
    # zenjxl gates JxlEncoderConfig behind the `zencodec` feature, which
    # turns the wrapper struct on. Pull it through here so the sweep
    # driver sees the public encoder type at all.
    "zenjxl?/zencodec",
    # The runner round-trips encoded bytes through a tempfile so the
    # path-based decoder can sniff format identically to production.
    "dep:tempfile",
    # Encoders need rgb / imgref / zencodec / almost_enough at runtime.
    "dep:rgb",
    "dep:imgref",
    "dep:zencodec",
    "dep:almost-enough",
    # Direct jxl-encoder dep (in addition to zenjxl wrapper) so the JXL
    # sweep path can configure expert LossyConfig knobs the wrapper
    # doesn't expose: with_butteraugli_iters, with_zensim_iters,
    # with_ssim2_iters, with_pixel_domain_loss, with_patches,
    # with_gaborish, with_force_strategy, with_progressive,
    # with_error_diffusion, with_lf_frame, with_denoise. Same version
    # zenjxl 0.2.1 pins (0.3.1) so no duplicate compilation.
    "dep:jxl-encoder",
    # `--feature-output <path.parquet>` writes a per-cell sidecar of zensim's
    # 300-feature extended vector. Pulled into the sweep feature so the dep
    # cost is opt-in: a build without `--features sweep` doesn't ship the
    # Apache Arrow/Parquet stack.
    "dep:parquet",
    "dep:arrow-array",
    "dep:arrow-schema",
]

[dependencies]
clap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
# `preserve_order` keeps the JSON `compare` output in the order we insert
# keys (reference → variant → scores), matching the documented schema.
serde_json = { workspace = true, features = ["preserve_order"] }
csv = { workspace = true }
# Inner-loop parallelism in the sweep runner. CPU metrics already use
# rayon internally for SIMD; we add per-cell rayon at the outer level so
# one zen-metrics process saturates all cores natively, replacing the
# `xargs -P` shell-level fan-out used in earlier sweeps.
rayon = "1"

# zen image decoders
zenpng = { version = "0.1.4", optional = true }
zenjpeg = { path = "../../../zenjpeg/zenjpeg", default-features = false, optional = true, features = ["decoder"] }
zenwebp = { version = "0.4.5", optional = true }
zenavif = { version = "0.1.7", optional = true }
zenjxl = { version = "0.2.1", optional = true }

# Direct jxl-encoder dep with the loop features that the zenjxl wrapper does
# not surface. Same version zenjxl 0.2.1 pins so no duplicate build. Used
# only by the `sweep` JXL path when expert knobs are present in the grid.
jxl-encoder = { version = "0.3.1", optional = true, default-features = false, features = [
    "std",
    "parallel",
    "butteraugli-loop",
    "ssim2-loop",
    "zensim-loop",
    "rate-control",
    "__expert",
    "convenience",
] }

# Pulled in by the `sweep` feature. zencodec exposes the EncodeJob /
# Encoder traits that drive zenjxl encoding; almost_enough is the
# cooperative-cancellation crate zenavif's encoder takes by value.
zencodec = { version = "0.1.20", optional = true }
almost-enough = { version = "0.4.3", optional = true }

# zenpixels exposes the PixelBuffer / PixelSlice types returned by zen
# decoders. We pin to a version compatible with the decoders above.
zenpixels = "0.2.11"
# zenpixels-convert handles every supported source pixel layout (u8/u16/f32,
# Gray/RGB/RGBA, premul/straight, sRGB/linear) → RGB8 sRGB through a single
# RowConverter. This is the canonical path; the CLI used to ship bespoke
# u16/f32 → u8 helpers that have all been deleted in favour of delegation.
zenpixels-convert = "0.2.11"
# enough provides the cooperative cancellation token zenpng's decode wants.
enough = "0.4.4"

# CPU metrics
butteraugli = { version = "0.9.2", optional = true }
# 0.3.0 adds principled per-channel H-blur activity for masked/IW features
# (feat/principled-activity branch). 0.2.8 added `Zensim::compute_extended_features()`.
zensim = { version = "0.3.0", optional = true }
ssimulacra2 = { version = "0.5.1", optional = true }
dssim-core = { workspace = true, optional = true }
rgb = { version = "0.8", optional = true }
imgref = { version = "1", optional = true }

# GPU metric backends are routed through the `zenmetrics-api` umbrella
# crate. The umbrella's opaque API is cubecl-version-agnostic, so this
# CLI no longer depends on the individual `*-gpu` crates and the common
# scoring paths (ssim2, dssim, iwssim, zensim, single-call cvvdp) never
# name a cubecl type.
#
# Two paths still reach the per-crate typed cubecl-types surface via
# the umbrella's `zenmetrics_api::{butter,cvvdp}` re-exports:
#   - butteraugli's two-column emit (`butteraugli_max_gpu` +
#     `butteraugli_pnorm3_gpu`) needs `ButteraugliResult.pnorm_3`,
#     which the opaque `Score` does not surface.
#   - `CvvdpBatchScorer` caches a `Cvvdp::<R>` instance across pairs of
#     matching dims to avoid the ~200 MB / NVRTC compile per-pair cost
#     that produces fleet OOMs at 100-pair chunks.
# These two paths still need to name `R: cubecl::Runtime` for the
# generic, so an optional `cubecl` dep is pulled in by `gpu-butteraugli`
# / `gpu-cvvdp`. Keeping it optional means a CLI build with neither of
# those two metrics enabled (e.g. ssim2-only worker) still avoids the
# cubecl dependency entirely.
zenmetrics-api = { workspace = true, optional = true, default-features = false }
cubecl = { workspace = true, optional = true }

# tempfile is used by the `sweep` runner to round-trip encoded bytes
# through the path-based decoder. It is also used in the test suite,
# which is why it's kept as a runtime dep gated on the `sweep` feature
# rather than dev-only.
tempfile = { version = "3", optional = true }

# Parquet output sidecar for the `sweep` subcommand. Stores zensim's
# 300-feature extended vector per encoded cell so future selector / MLP
# retraining can reuse the per-cell features without re-running the full
# Cartesian sweep (which is the dominant compute cost).
# All three only flow in when `--features sweep` is enabled.
parquet = { version = "58.2.0", default-features = false, features = ["arrow", "zstd"], optional = true }
arrow-array = { version = "58.2.0", optional = true }
arrow-schema = { version = "58.2.0", optional = true }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
# Used by the `sweep_writes_zensim_feature_parquet` integration test to read
# back the parquet file the CLI produced. Aligned with the `parquet` version
# used by the sweep feature.
parquet = { version = "58.2.0", default-features = false, features = ["arrow", "zstd"] }
