[package]
name = "zen-sweep-worker"
description = "Cloud-agnostic sweep worker binary. Selects a cloud backend at runtime via --backend (cargo-feature-gated) over the zen-cloud-core trait layer and runs the encode+score sweep compute loop. The single compute binary baked into the deploy image."
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "MIT OR Apache-2.0"
keywords = ["cloud", "worker", "sweep", "vastai"]
categories = ["command-line-utilities"]
publish = false

[[bin]]
name = "zen-sweep-worker"
path = "src/main.rs"

[features]
# Backend set, selected at runtime via `--backend <name>` among the
# compiled-in set (spec §1.6 decision 4 — cargo features + trait
# objects, NOT dlopen). vast.ai is the default; SaladCloud (Phase C)
# is the second provider.
default = ["vastai"]
# The vast.ai backend, including the full inline-sweep encode+score
# worker (the production deploy path). Mirrors the v26 image build
# (`--features inline-sweep`) so the compute closure is byte-identical
# to today's vastai-fleet worker.
vastai = ["_vastai-backend", "zen-cloud-vastai/inline-sweep", "zen-cloud-vastai/source-features"]
# Verification-only: the cloud-agnostic binary wiring without the
# GPU/codec encode+score tree. Lets `cargo build --features vastai-min`
# typecheck the --backend dispatch on machines/checkouts where the
# heavy sibling deps don't compile. NOT a production build.
vastai-min = ["_vastai-backend", "zen-cloud-vastai/worker"]
# Internal marker: the vast.ai backend code (the `Worker` subcommand +
# dispatch) is compiled in. Both `vastai` (full) and `vastai-min`
# (verification) enable it; the source gates on this, not on a specific
# feature-set, so the code path is identical under either.
_vastai-backend = ["dep:zen-cloud-vastai"]

# The SaladCloud backend GLUE (spec §1.9, Phase C). Pulls the salad
# provider crate + vast.ai's GPU-free `worker` feature for the shared
# `WorkerArgs` + R2 client. This is the build the acceptance gate
# checks (`cargo build -p zen-sweep-worker --features salad`): it wires
# the generic run_worker loop with the Salad JobQueue / WorkerHost /
# CredentialSource / BlobStorage / Heartbeat, GPU-free. The encode+score
# compute itself lives behind `salad-sweep` (it shares vast.ai's
# inline-sweep tree, which is the production-image build).
salad = ["_salad-backend", "_vastai-backend", "zen-cloud-vastai/worker"]
# Full Salad production build: salad glue + the shared inline-sweep
# encode+score compute (same GPU tree as `vastai`). This is what the
# Salad deploy image builds. Held separately from `salad` so the glue +
# dispatch typecheck on checkouts where the heavy GPU sibling deps don't
# compile.
salad-sweep = ["salad", "_salad-sweep", "zen-cloud-vastai/inline-sweep", "zen-cloud-vastai/source-features"]
# Internal marker: the Salad backend code (dispatch arm) is compiled in.
_salad-backend = ["dep:zen-cloud-salad", "dep:tracing", "dep:tracing-subscriber"]
# Internal marker: the inline encode+score compute is available to the
# salad backend (cargo does not expose a dependency's feature as a cfg
# in the dependent, so the salad compute path gates on this local mirror
# of `zen-cloud-vastai/inline-sweep`).
_salad-sweep = ["dep:tokio"]

[dependencies]
zen-cloud-core = { workspace = true }
zen-cloud-vastai = { workspace = true, optional = true, default-features = false }
zen-cloud-salad = { workspace = true, optional = true, default-features = false }
clap = { workspace = true, features = ["env"] }
anyhow = "1.0.102"
# Tracing init for the salad backend's run_worker loop logs (the
# vast.ai backend brings its own subscriber inside cmd_worker).
tracing = { version = "0.1.44", default-features = false, features = ["std"], optional = true }
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["fmt", "env-filter"], optional = true }
# Multi-thread runtime to drive the async inline encode+score compute
# from the synchronous salad compute closure (only the `salad-sweep`
# build calls it).
tokio = { version = "1.52.3", default-features = false, features = ["rt-multi-thread"], optional = true }
