[package]
name = "zenfleet-hetzner"
description = "Hetzner Cloud REST client + cloud-init-driven worker bootstrap: a thin reqwest wrapper over the server endpoints plus the user_data that boots the backend-agnostic encode+score worker, which polls R2 for chunks (Hetzner has no managed queue)."
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
keywords = ["hetzner", "cloud", "fleet", "job-queue"]
categories = ["concurrency", "api-bindings"]
publish = false

[lib]
name = "zenfleet_hetzner"
path = "src/lib.rs"

[dependencies]
# anyhow for the REST client error model.
anyhow = "1.0.102"
# Hetzner REST client. reqwest with rustls so no system OpenSSL.
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
