[package]
name = "zenfleet-ledger"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Columnar Parquet persistence + latest-wins compaction for the zen job ledger and blob index."
license = "MIT OR Apache-2.0"

[dependencies]
zenfleet-core = { version = "0.0.1", path = "../zenfleet-core" }
parquet = { version = "58.2.0", default-features = false, features = ["arrow", "zstd"] }
arrow-array = "58.2.0"
arrow-schema = "58.2.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
